Prepare for Vaadin 23, JDK 11, CKEditor - QuillEditor